vpc.yaml


AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation Template for VPC'
Resources:
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.16.0.0/16'
      EnableDnsSupport: true # allows instances in the VPC to resolve public DNS hostnames to IP addresses
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: 'MyVPC'
  # Public subnet in AZ 1 
  PublicSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC # reference to the VPC we just created, logical ID  
      CidrBlock: '172.16.1.0/24'
      AvailabilityZone: !Select [ 0, !GetAZs '' ] # selects the first availability zone in the region, helping high availability
      MapPublicIpOnLaunch: true # When an EC2 instance is launched in this subnet, it will automatically receive a public IP address. This makes the instance directly accessible from the internet.
      Tags:
        - Key: Name
          Value: 'PublicSubnet1A'

  # App Private subnet in AZ 1 
  AppPrivateSubnet1A:
      Type: 'AWS::EC2::Subnet'
      Properties:
        VpcId: !Ref MyVPC
        CidrBlock: '172.16.2.0/24'
        AvailabilityZone: !Select [ 0, !GetAZs '' ] # selects the first availability zone in the region, helping high availability
        Tags:
          - Key: Name
            Value: 'AppPrivateSubnet1A'

  # Data Private subnet in AZ 1 
  DataPrivateSubnet1A:
      Type: 'AWS::EC2::Subnet'
      Properties:
        VpcId: !Ref MyVPC
        CidrBlock: '172.16.3.0/24'
        AvailabilityZone: !Select [ 0, !GetAZs '' ] # selects the first availability zone in the region, helping high availability
        Tags:
          - Key: Name
            Value: 'DataPrivateSubnet1A'

  # SECOND SET OF SUBNETS IN ANOTHER AVAILABILITY ZONE FOR HIGH AVAILABILITY #

# Public subnet in AZ 2
  PublicSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC # reference to the VPC we just created, logical ID  
      CidrBlock: '172.16.4.0/24'
      AvailabilityZone: !Select [ 1, !GetAZs '' ] # selects the first availability zone in the region, helping high availability
      MapPublicIpOnLaunch: true # When an EC2 instance is launched in this subnet, it will automatically receive a public IP address. This makes the instance directly accessible from the internet.
      Tags:
        - Key: Name
          Value: 'PublicSubnet2B'
          
# App Private subnet in AZ 2
  AppPrivateSubnet2B:
      Type: 'AWS::EC2::Subnet'
      Properties:
        VpcId: !Ref MyVPC
        CidrBlock: '172.16.5.0/24'
        AvailabilityZone: !Select [ 1, !GetAZs '' ] # selects the first availability zone in the region, helping high availability
        Tags:
          - Key: Name
            Value: 'AppPrivateSubnet2B'
          
# Data Private subnet in AZ 2
  DataPrivateSubnet2B:
      Type: 'AWS::EC2::Subnet'
      Properties:
        VpcId: !Ref MyVPC
        CidrBlock: '172.16.6.0/24'
        AvailabilityZone: !Select [ 1, !GetAZs '' ] # selects the first availability zone in the region, helping high availability
        Tags:
          - Key: Name
            Value: 'DataPrivateSubnet2B' 


  #Internet Gateway to allow communication between the VPC and the internet
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: 'MyVPC-IGW'

  # Attach IGW to the VPC
  AttachInternetGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway 

  #Route Table for Public Subnets to route traffic to the Internet Gateway  
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable' 
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: 'PublicRouteTable'

  # Public Routes
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachInternetGateway # ensures that the route is created after the IGW is attached to the VPC
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0' # routes all traffic to the internet
      GatewayId: !Ref InternetGateway # specifies that the traffic should be routed through the Internet


    # Public Subnet 1A Route Table association to associate the public subnet with the public route table, allowing instances in this subnet to use the routes defined in the public route table (like the default route to the internet):
  PublicSubnet1ARouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

  # public subnet 2b    
  PublicSubnet2BRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2B
      RouteTableId: !Ref PublicRouteTable 

  #Bastion Security Group to allow SSH access
  BastionSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow SSH access to the bastion host'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: 22
          ToPort: 22
          CidrIp: '142.126.157.208/32'

  #Bastion host EC2
  BastionHost:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't3.micro' # t3.micro is Free Tier eligible
      ImageId: 'ami-0236922087fa98b6e' # Amazon Linux 2 AMI in us-east-1
      SubnetId: !Ref PublicSubnet1A
      SecurityGroupIds: 
        - !Ref BastionSG
      KeyName: 'bastion' # specify your key pair name
      Tags:
        - Key: Name
          Value: 'BastionHost'
